Fixed row overflowing bug

--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -11,3 +11,8 @@ button:focus {outline:0 !important;}
 		float: none !important;
 	}
 }
+
+.row {
+	margin-right: -10px;
+	margin-left: -10px;
+}
